--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
 <!-- Bootstrap Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
-
 </head>
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
 
@@ -40,13 +39,13 @@
 
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="">Contact</a>
+                <a class="nav-link" href="#footer">Contact</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Pricing</a>
+                <a class="nav-link" href="#pricing">Pricing</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">Download</a>
+                <a class="nav-link" href="#cta">Download</a>
             </li>
           </ul>
         </div>
@@ -57,7 +56,7 @@
       <div class="row">
 
         <div class="col-lg-6">
-          <h1>Meet new and interesting dogs nearby.</h1>
+          <h1 class="big-heading">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-dark btn-lg download-button"><i class="fa-brands fa-apple"></i> Download</button>
           <button type="button" class="btn btn-outline-light btn-lg  download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
@@ -75,25 +74,29 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
+
+  <div class="container-fluid">
 
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="icon fa-solid fa-circle-check fa-4x"></i>
-          <h3>Easy to use.</h3>
+          <h3 class="features-text">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icon fa-solid fa-bullseye fa-4x"></i>
-          <h3>Elite Clientele</h3>
+          <h3 class="features-text">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
         <div class="feature-box col-lg-4">
           <i class="icon fa-solid fa-heart fa-4x"></i>
-          <h3>Guaranteed to work.</h3>
+          <h3 class="features-text">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
       </div>
+
+    </div>
 
 
 
@@ -102,16 +105,16 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="false">
     <div class="carousel-inner">
-      <div class="carousel-item active">
-        <h2>I no longer have to sniff other dogs butts to find "the one". I've found the hottest Corgi on TinDog. Woof.</h2>
+      <div class="carousel-item active container-fluid">
+        <h2 class="testimonial-text">I no longer have to sniff other dogs butts to find the one. I've found the cutest Corgi on TinDog. Woof.</h2>
         <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
         <em>Pebbles, New York</em>
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item container-fluid">
         <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
         <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
         <em>Beverly, Illinois</em>
@@ -130,7 +133,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -141,13 +144,10 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
 
-    <h2>A Plan for Every Dog's Needs</h2>
+    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for your and your dog.</p>
-
-
-<!-- <div class="row row-cols-1 row-cols-md-3 mb-3 text-center"> -->
 
 <div class="row">
   <div class="pricing-column col-lg-4 col-md-6">
@@ -156,7 +156,7 @@
         <h3>Chihuahua</h3>
       </div>
       <div class="card-body d-grid gap-2">
-        <h2>Free</h2>
+        <h2 class="pricing-text">Free</h2>
         <p>5 Matches Per Day</p>
         <p>10 Messages Per Day</p>
         <p>Unlimited App Usage</p>
@@ -171,11 +171,11 @@
         <h3>Labrador</h3>
       </div>
       <div class="card-body d-grid gap-2">
-        <h2>$49 / mo</h2>
+        <h2 class="pricing-text">$49 / mo</h2>
         <p>Unlimited Matches</p>
         <p>Unlimited Messages</p>
         <p>Unlimited App Usage</p>
-        <button type="button" class="btn btn-dark">Sign Up</button>
+        <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
 
       </div>
     </div>
@@ -187,12 +187,12 @@
           <h3>Mastiff</h3>
         </div>
         <div class="card-body d-grid gap-2">
-          <h2>$99 / mo</h2>
+          <h2 class="pricing-text">$99 / mo</h2>
           <p>Pirority Listing</p>
           <p>Unlimited Matches</p>
           <p>Unlimited Messages</p>
           <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-dark">Sign Up</button>
+          <button type="button" class="btn btn-lg btn-dark">Sign Up</button>
 
         </div>
     </div>
@@ -201,26 +201,27 @@
 
   </section>
 
-
   <!-- Call to Action -->
 
-  <section id="cta">
-
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
-
+  <section class="colored-section" id="cta">
+  <div class="container-fluid">
+    <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i> Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
+  </div>
   </section>
-
 
   <!-- Footer -->
 
-  <footer id="footer">
-
+  <footer class="white-section" id="footer">
+  <div class="container-fluid">
+    <i class="fa-brands fa-twitter footer-icon"></i>
+    <i class="fa-brands fa-facebook footer-icon"></i>
+    <i class="fa-brands fa-instagram footer-icon"></i>
+    <i class="fa-solid fa-envelope footer-icon"></i>
     <p>© Copyright TinDog</p>
-
+  </div>
   </footer>
-
 
 </body>
 
