javascript scroll animation test 1

--- a/index.html
+++ b/index.html
@@ -77,26 +77,32 @@
   <section class="white-section" id="features">
 
   <div class="container-fluid">
-
       <div class="row">
-        <div class="feature-box col-lg-4">
-          <i class="icon fa-solid fa-circle-check fa-4x"></i>
-          <h3 class="features-text">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+        <div class="slide-in">
+          <div class="feature-box col-lg-4">
+            <i class="icon fa-solid fa-circle-check fa-4x"></i>
+            <h3 class="features-text">Easy to use.</h3>
+            <p>So easy to use, even your dog could do it.</p>
+          </div>
         </div>
 
-        <div class="feature-box col-lg-4">
-          <i class="icon fa-solid fa-bullseye fa-4x"></i>
-          <h3 class="features-text">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+        <div class="slide-in">
+          <div class="feature-box col-lg-4">
+            <i class="icon fa-solid fa-bullseye fa-4x"></i>
+            <h3 class="features-text">Elite Clientele</h3>
+            <p>We have all the dogs, the greatest dogs.</p>
+          </div>
         </div>
-        <div class="feature-box col-lg-4">
-          <i class="icon fa-solid fa-heart fa-4x"></i>
-          <h3 class="features-text">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+
+        <div class="slide-in">
+          <div class="feature-box col-lg-4">
+            <i class="icon fa-solid fa-heart fa-4x"></i>
+            <h3 class="features-text">Guaranteed to work.</h3>
+            <p>Find the love of your dog's life or your money back.</p>
+          </div>
+        </div>
       </div>
-
-    </div>
+  </div>
 
 
 
@@ -222,6 +228,8 @@
     <p>© Copyright TinDog</p>
   </div>
   </footer>
+
+ <script src="index.js"></script>
 
 </body>
 
