--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
 <!-- Bootstrap Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
+<!-- JavaScript -->
+<script src="index.js" defer></script>
 </head>
 
 <body>
@@ -77,31 +78,29 @@
   <section class="white-section" id="features">
 
   <div class="container-fluid">
-      <div class="row">
-        <div class="slide-in">
-          <div class="feature-box col-lg-4">
-            <i class="icon fa-solid fa-circle-check fa-4x"></i>
-            <h3 class="features-text">Easy to use.</h3>
-            <p>So easy to use, even your dog could do it.</p>
-          </div>
-        </div>
-
-        <div class="slide-in">
-          <div class="feature-box col-lg-4">
-            <i class="icon fa-solid fa-bullseye fa-4x"></i>
-            <h3 class="features-text">Elite Clientele</h3>
-            <p>We have all the dogs, the greatest dogs.</p>
-          </div>
-        </div>
-
-        <div class="slide-in">
-          <div class="feature-box col-lg-4">
-            <i class="icon fa-solid fa-heart fa-4x"></i>
-            <h3 class="features-text">Guaranteed to work.</h3>
-            <p>Find the love of your dog's life or your money back.</p>
-          </div>
+    <div class="row">
+      <div class="animation">
+        <div class="feature-box col-lg-4">
+          <i class="icon fa-solid fa-circle-check fa-4x"></i>
+          <h3 class="features-text">Easy to use.</h3>
+          <p>So easy to use, even your dog could do it.</p>
         </div>
       </div>
+      <div class="animation">
+        <div class="feature-box col-lg-4">
+          <i class="icon fa-solid fa-bullseye fa-4x"></i>
+          <h3 class="features-text">Elite Clientele</h3>
+          <p>We have all the dogs, the greatest dogs.</p>
+        </div>
+      </div>
+      <div class="animation">
+        <div class="feature-box col-lg-4">
+          <i class="icon fa-solid fa-heart fa-4x"></i>
+          <h3 class="features-text">Guaranteed to work.</h3>
+          <p>Find the love of your dog's life or your money back.</p>
+        </div>
+      </div>
+    </div>
   </div>
 
 
@@ -228,8 +227,6 @@
     <p>© Copyright TinDog</p>
   </div>
   </footer>
-
- <script src="index.js"></script>
 
 </body>
 
