--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>TinDog</title>
 
 <!-- Google Fonts -->
@@ -11,13 +13,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;900&family=Ubuntu&display=swap" rel="stylesheet">
 <!-- CSS Stylesheets -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="css/style.css">
 <!-- Font Awesome -->
 <script src="https://use.fontawesome.com/releases/v6.1.1/js/all.js"></script>
 <!-- Bootstrap Scripts -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <!-- JavaScript -->
-<script src="index.js" defer></script>
+<script defer src="app.js"></script>
 </head>
 
 <body>
@@ -79,27 +81,25 @@
 
   <div class="container-fluid">
     <div class="row">
-      <div class="animation">
+
         <div class="feature-box col-lg-4">
           <i class="icon fa-solid fa-circle-check fa-4x"></i>
-          <h3 class="features-text">Easy to use.</h3>
+          <h3 class="features-text hidden">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
-      </div>
-      <div class="animation">
+
         <div class="feature-box col-lg-4">
           <i class="icon fa-solid fa-bullseye fa-4x"></i>
           <h3 class="features-text">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
-      </div>
-      <div class="animation">
+
         <div class="feature-box col-lg-4">
           <i class="icon fa-solid fa-heart fa-4x"></i>
           <h3 class="features-text">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
-      </div>
+
     </div>
   </div>
 
