--- a/index.html
+++ b/index.html
@@ -78,28 +78,23 @@
   <!-- Features -->
 
   <section class="white-section" id="features">
-
   <div class="container-fluid">
     <div class="row">
-
-        <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-4 reveal slide-1">
           <i class="icon fa-solid fa-circle-check fa-4x"></i>
-          <h3 class="features-text hidden">Easy to use.</h3>
+          <h3 class="features-text">Easy to use.</h3>
           <p>So easy to use, even your dog could do it.</p>
         </div>
-
-        <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-4 reveal slide-2">
           <i class="icon fa-solid fa-bullseye fa-4x"></i>
           <h3 class="features-text">Elite Clientele</h3>
           <p>We have all the dogs, the greatest dogs.</p>
         </div>
-
-        <div class="feature-box col-lg-4">
+        <div class="feature-box col-lg-4 reveal slide-3">
           <i class="icon fa-solid fa-heart fa-4x"></i>
           <h3 class="features-text">Guaranteed to work.</h3>
           <p>Find the love of your dog's life or your money back.</p>
         </div>
-
     </div>
   </div>
 
@@ -115,9 +110,9 @@
   <div id="carouselExampleControls" class="carousel slide" data-bs-ride="false">
     <div class="carousel-inner">
       <div class="carousel-item active container-fluid">
-        <h2 class="testimonial-text">I no longer have to sniff other dogs butts to find the one. I've found the cutest Corgi on TinDog. Woof.</h2>
-        <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
-        <em>Pebbles, New York</em>
+        <h2 class="testimonial-text reveal slide-1">I no longer have to sniff other dogs butts to find the one. I've found the cutest Corgi on TinDog. Woof.</h2>
+        <img class="testimonial-image reveal slide-2" src="images/dog-img.jpg" alt="dog-profile">
+        <em class="reveal slide-2">Pebbles, New York</em>
       </div>
       <div class="carousel-item container-fluid">
         <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
@@ -139,10 +134,10 @@
   <!-- Press -->
 
   <section class="colored-section" id="press">
-    <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-logo" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-logo reveal slide-1" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-logo reveal slide-2" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-logo reveal slide-3" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-logo reveal slide-4" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
@@ -151,12 +146,12 @@
 
   <section class="white-section" id="pricing">
 
-    <h2 class="section-heading">A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <h2 class="section-heading reveal slide-1">A Plan for Every Dog's Needs</h2>
+    <p class="reveal slide-2">Simple and affordable price plans for your and your dog.</p>
 
 <div class="row">
   <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
+    <div class="card reveal slide-2">
       <div class="card-header">
         <h3>Chihuahua</h3>
       </div>
@@ -171,7 +166,7 @@
   </div>
 
   <div class="pricing-column col-lg-4 col-md-6">
-    <div class="card">
+    <div class="card reveal slide-3">
       <div class="card-header">
         <h3>Labrador</h3>
       </div>
@@ -187,7 +182,7 @@
   </div>
 
   <div class="pricing-column col-lg-4">
-    <div class="card">
+    <div class="card reveal slide-4">
         <div class="card-header">
           <h3>Mastiff</h3>
         </div>
@@ -209,7 +204,7 @@
   <!-- Call to Action -->
 
   <section class="colored-section" id="cta">
-  <div class="container-fluid">
+  <div class="container-fluid reveal slide-1">
     <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
     <button type="button" class="btn btn-lg btn-dark download-button"><i class="fa-brands fa-apple"></i> Download</button>
     <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
@@ -219,7 +214,7 @@
   <!-- Footer -->
 
   <footer class="white-section" id="footer">
-  <div class="container-fluid">
+  <div class="container-fluid reveal slide-2">
     <i class="fa-brands fa-twitter footer-icon"></i>
     <i class="fa-brands fa-facebook footer-icon"></i>
     <i class="fa-brands fa-instagram footer-icon"></i>
